# fibey

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.agent  Dockerfile.agent-service  README.md  agent.yaml  azure.yaml  pyproject.toml  requirements.txt
docs/: deployment.md  local-development.md  toolbox-integration.md
infra/: main.bicep  main.parameters.json  resources.bicep
infra/core/ai/: ai-project.bicep
infra/modules/: ai-account-role-assignments.bicep  ai-search.bicep  container-app.bicep  storage-account.bicep
scripts/: setup-knowledge-base.sh  setup-toolbox.sh
services/inventory-mcp/: Dockerfile
services/status-dashboard/: Dockerfile
services/work-orders-api/: Dockerfile
src/fibey/agent/: agent.py  hosted.py
src/fibey/agent/prompts/: system_prompt.md
src/fibey/agent/skills/field-briefing/: SKILL.md
src/fibey/gateway/: api_server.py
ui/: Dockerfile
ui/src/: App.tsx  index.css
ui/src/api/: client.ts
ui/src/components/: ActivitySidebar.tsx  ChatInput.tsx  ChatPanel.tsx  MessageBubble.tsx  PromptSuggestions.tsx
ui/src/hooks/: useChat.ts
